--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '2.1'
+version: '3.8'
 
 services:
     receptor:
-        image: snisioi/tema3_2020
+        image: snisioi/tema1_2021
         privileged: true
         volumes:
-            - ..:/elocal
+            - .:/elocal
         tty: true
         cap_add:
           - NET_ADMIN
@@ -16,11 +16,11 @@ services:
               ipv4_address: 198.8.0.2
         depends_on:
             - "router"
-        command: /server.sh
+        command: /elocal/src/receptor.sh
     router:
-        image: snisioi/tema3_2020
+        image: snisioi/tema1_2021
         volumes:
-            - ..:/elocal
+            - .:/elocal
         tty: true
         cap_add:
           - NET_ADMIN
@@ -33,11 +33,11 @@ services:
               ipv4_address: 198.8.0.1
         sysctls:
           - net.ipv4.ip_forward=1
-        command: /drop_packages.sh
+        command: /elocal/src/t1_router.sh 
     emitator:
-        image: snisioi/tema3_2020
+        image: snisioi/tema1_2021
         volumes:
-            - ..:/elocal
+            - .:/elocal
         tty: true
         cap_add:
           - NET_ADMIN
@@ -49,7 +49,7 @@ services:
         depends_on:
             - "router"
             - "receptor"
-        command: /client.sh
+        command: /elocal/src/emitator.sh
 networks:
     subnet1:
         ipam:
